--- a/Distributions.Console/Distributions.Console.csproj
+++ b/Distributions.Console/Distributions.Console.csproj
@@ -7,4 +7,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Distributions\Distributions.csproj" />
+  </ItemGroup>
+
 </Project>
