Added unit tests

--- a/Distributions.Test/Distributions.Test.csproj
+++ b/Distributions.Test/Distributions.Test.csproj
@@ -20,4 +20,9 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Distributions.Console\Distributions.Console.csproj" />
+    <ProjectReference Include="..\Distributions\Distributions.csproj" />
+  </ItemGroup>
+
 </Project>
